# autolight

./: Makefile  Makefile.in  README.md  autolight  config.h.in  configure  configure.ac  delux  delux.c  delux.legacy  install-sh  luxtab.csv  paths.h
init.d/: autolightd  deluxd
